@@ -2,6 +2,8 @@
 - Add ClientConfig_ConfigChange event to be able of hooking into configuration changes [#117]
 - Change plugin event from OnHandleRequest to OnMODXInit [#87, #109, #115]
 - Enable inline editing in the admin component [#94, #95, #114]
+- Fix field-required errors not being shown by adding a popup
+- Accept 0 as valid required value on the number input [#119]
 
 ++ ClientConfig 1.3.2-pl
 ++ Released on 2015-12-09
